--- a/index.html
+++ b/index.html
@@ -790,8 +790,6 @@
 			</div>
 		</div>
 
-		</div>
-
 		<div class="section-title" style="margin-top: 5.5rem; clear: both">
 			<h2>[ Our Partners ]</h2>
 		</div>
@@ -857,94 +855,148 @@
 			</div>
 		</div>
 
-		<div class="image-container centene">
-			<img src="images/sponsor_centene.jpg" />
-		</div>
-		<div class="image-container panera">
-			<img src="images/panera-logo.png" />
-		</div>
-		<div class="image-container es">
-			<img src="images/escript.png" />
-		</div>
+		<a href="https://jobs.centene.com/" target="_blank">
+			<div class="image-container centene">
+				<img src="images/sponsor_centene.jpg" />
+			</div>
+		</a>
+		<a href="https://jobs.panerabread.com/" target="_blank">
+			<div class="image-container panera">
+				<img src="images/panera-logo.png" />
+			</div>
+		</a>
+		<a href="https://careers.express-scripts.com/us/en/" target="_blank">
+			<div class="image-container es">
+				<img src="images/escript.png" />
+			</div>
+		</a>
 
-		<div class="image-container tradebot">
-			<img src="images/sponsor_tradebot.jpg" />
-		</div>
-		<div class="image-container mixmax">
-			<img src="images/logo_mixmax.png" />
-		</div>
+		<a href="http://www.tradebot.com/careers.asp" target="_blank">
+			<div class="image-container tradebot">
+				<img src="images/sponsor_tradebot.jpg" />
+			</div>
+		</a>
+		<a href="https://mixmax.com/careers/" target="_blank">
+			<div class="image-container mixmax">
+				<img src="images/logo_mixmax.png" />
+			</div>
+		</a>
 
-		<div class="image-container master">
-			<img src="images/mastercard-logo.png" />
-		</div>
-		<div class="image-container union">
-			<img src="images/up_logo.png" />
-		</div>
-		<div class="image-container edward">
-			<img src="images/logo_edwardjones.png" />
-		</div>
-		<div class="image-container labs">
-			<img src="images/1904logo.png" />
-		</div>
-		<div class="image-container rr">
-			<img src="images/rrlogo.png" />
-		</div>
-		<div class="image-container hw">
-			<img src="images/hw.png" />
-		</div>
-		<div class="image-container git">
-			<img src="images/gh.png" />
-		</div>
-		<div class="image-container emerson">
-			<img src="images/emerson.png" />
-		</div>
-		<div class="image-container eng">
-			<img src="images/eng.png" />
-		</div>
+		<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html" target="_blank">
+			<div class="image-container master">
+				<img src="images/mastercard-logo.png" />
+			</div>
+		</a>
+		<a href="https://up.jobs/index.htm" target="_blank">
+			<div class="image-container union">
+				<img src="images/up_logo.png" />
+			</div>
+		</a>
+		<a href="http://careers.edwardjones.com/index.html" target="_blank">
+			<div class="image-container edward">
+				<img src="images/logo_edwardjones.png" />
+			</div>
+		</a>
+		<a href="https://1904labs.com/join-us/jobs/" target="_blank">
+			<div class="image-container labs">
+				<img src="images/1904logo.png" />
+			</div>
+		</a>
+		<a href="https://careers.rolls-royce.com/usa" target="_blank">
+			<div class="image-container rr">
+				<img src="images/rrlogo.png" />
+			</div>
+		</a>
+		<a href="https://kcnsc.doe.gov/" target="_blank">
+			<div class="image-container hw">
+				<img src="images/hw.png" />
+			</div>
+		</a>
+		<a href="https://github.com/about/careers" target="_blank">
+			<div class="image-container git">
+				<img src="images/gh.png" />
+			</div>
+		</a>
+		<a href="https://www.emerson.com/en-us/careers" target="_blank">
+			<div class="image-container emerson">
+				<img src="images/emerson.png" />
+			</div>
+		</a>
+		<a href="https://cec.mst.edu/" target="_blank">
+			<div class="image-container eng">
+				<img src="images/eng.png" />
+			</div>
+		</a>
 
-		<div class="image-container balsamiq">
-			<img src="images/logo_balsamiq.png" />
-		</div>
-		<div class="image-container brewer">
-			<img src="images/bs.png" />
-		</div>
-		<div class="image-container cs">
-			<img src="images/cs.png" />
-		</div>
-		<div class="image-container coab">
-			<img src="images/coab.png" />
-		</div>
-		<div class="image-container it">
-			<img src="images/info.png" />
-		</div>
+		<a href="https://balsamiq.com/company/jobs/" target="_blank">
+			<div class="image-container balsamiq">
+				<img src="images/logo_balsamiq.png" />
+			</div>
+		</a>
+		<a href="https://www.brewerscience.com/about-us/company/careers/job-postings/" target="_blank">
+			<div class="image-container brewer">
+				<img src="images/bs.png" />
+			</div>
+		</a>
+		<a href="http://cs.mst.edu/" target="_blank">
+			<div class="image-container cs">
+				<img src="images/cs.png" />
+			</div>
+		</a>
+		<a href="https://casb.mst.edu/" target="_blank">
+			<div class="image-container coab">
+				<img src="images/coab.png" />
+			</div>
+		</a>
+		<a href="https://it.mst.edu/" target="_blank">
+			<div class="image-container it">
+				<img src="images/info.png" />
+			</div>
+		</a>
 		<div class="section-title" style="clear: both; margin-top: 10rem">
 			<h2>[ Our Partners ]</h2>
 		</div>
 
-		<div class="image-container mlh">
-			<img src="images/mlh.png" />
-		</div>
-		<div class="image-container acm">
-			<img src="images/acm.png" />
-		</div>
-		<div class="image-container acm-w">
-			<img src="images/acmw.PNG" />
-		</div>
-		<div class="image-container jet">
-			<img src="images/logo_jetbrains.png" />
-		</div>
-		<div class="image-container tech">
-			<img src="images/sponsor_techdomains.png" />
-		</div>
-		<div class="image-container wolfram">
-			<img src="images/wolfram-logo.png" />
-		</div>
-		<div class="image-container sketch">
-			<img src="images/sketch.png" />
-		</div>
-		<div class="image-container do">
-			<img src="images/do.png" />
-		</div>
+		<a href="https://mlh.io/" target="_blank">
+			<div class="image-container mlh">
+				<img src="images/mlh.png" />
+			</div>
+		</a>
+		<a href="https://acm.mst.edu" target="_blank">
+			<div class="image-container acm">
+				<img src="images/acm.png" />
+			</div>
+		</a>
+		<a href="" target="_blank">
+			<div class="image-container acm-w">
+				<img src="images/acmw.PNG" />
+			</div>
+		</a>
+		<a href="https://www.jetbrains.com/" target="_blank">
+			<div class="image-container jet">
+				<img src="images/logo_jetbrains.png" />
+			</div>
+		</a>
+		<a href="https://get.tech" target="_blank">
+			<div class="image-container tech">
+				<img src="images/sponsor_techdomains.png" />
+			</div>
+		</a>
+		<a href="https://www.wolfram.com/language/" target="_blank">
+			<div class="image-container wolfram">
+				<img src="images/wolfram-logo.png" />
+			</div>
+		</a>
+		<a href="https://www.sketchapp.com/" target="_blank">
+			<div class="image-container sketch">
+				<img src="images/sketch.png" />
+			</div>
+		</a>
+		<a href="https://www.digitalocean.com/" target="_blank">
+			<div class="image-container do">
+				<img src="images/do.png" />
+			</div>
+		</a>
 	</div>
 </section>
 
