--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 						<img src="images/panera-logo.png" />
 					</div>
 				</a>
-				<a href="https://careers.express-scripts.com/us/en/" target="_blank">
+				<a href="https://careers.express-scripts.com/us/en/students" target="_blank">
 					<div class="image-container es">
 						<img src="images/escript.png" />
 					</div>
@@ -751,7 +751,7 @@
 				</a>
 				<a href="https://www.emerson.com/en-us/careers" target="_blank">
 					<div class="image-container emerson">
-						<img src="images/emerson.png" />
+						<img src="images/emerson.jpg" />
 					</div>
 				</a>
 				<a href="https://cec.mst.edu/" target="_blank">
@@ -865,7 +865,7 @@
 				<img src="images/panera-logo.png" />
 			</div>
 		</a>
-		<a href="https://careers.express-scripts.com/us/en/" target="_blank">
+		<a href="https://careers.express-scripts.com/us/en/students" target="_blank">
 			<div class="image-container es">
 				<img src="images/escript.png" />
 			</div>
@@ -919,7 +919,7 @@
 		</a>
 		<a href="https://www.emerson.com/en-us/careers" target="_blank">
 			<div class="image-container emerson">
-				<img src="images/emerson.png" />
+				<img src="images/emerson.jpg" />
 			</div>
 		</a>
 		<a href="https://cec.mst.edu/" target="_blank">
