--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
 				</a>
 				<a href="https://jobs.panerabread.com/" target="_blank">
 					<div class="image-container panera">
-						<img src="images/panera-logo.png" />
+						<img src="images/panera-logo.svg" />
 					</div>
 				</a>
 				<a href="https://careers.express-scripts.com/us/en/students" target="_blank">
@@ -714,39 +714,9 @@
 			</div>
 
 			<div class="industry-other">
-				<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html" target="_blank">
-					<div class="image-container master">
-						<img src="images/mastercard-logo.png" />
-					</div>
-				</a>
-				<a href="https://up.jobs/index.htm" target="_blank">
-					<div class="image-container union">
-						<img src="images/up_logo.png" />
-					</div>
-				</a>
 				<a href="http://careers.edwardjones.com/index.html" target="_blank">
 					<div class="image-container edward">
 						<img src="images/logo_edwardjones.png" />
-					</div>
-				</a>
-				<a href="https://1904labs.com/join-us/jobs/" target="_blank">
-					<div class="image-container labs">
-						<img src="images/1904logo.png" />
-					</div>
-				</a>
-				<a href="https://careers.rolls-royce.com/usa" target="_blank">
-					<div class="image-container rr">
-						<img src="images/rrlogo.png" />
-					</div>
-				</a>
-				<a href="https://kcnsc.doe.gov/" target="_blank">
-					<div class="image-container hw">
-						<img src="images/hw.png" />
-					</div>
-				</a>
-				<a href="https://github.com/about/careers" target="_blank">
-					<div class="image-container git">
-						<img src="images/gh.png" />
 					</div>
 				</a>
 				<a href="https://www.emerson.com/en-us/careers" target="_blank">
@@ -754,11 +724,53 @@
 						<img src="images/emerson.jpg" />
 					</div>
 				</a>
+				<a href="https://kcnsc.doe.gov/" target="_blank">
+					<div class="image-container hw">
+						<img src="images/hw.png" />
+					</div>
+				</a>
+				<a href="https://1904labs.com/join-us/jobs/" target="_blank">
+					<div class="image-container labs">
+						<img src="images/1904logo.png" />
+					</div>
+				</a>
+				<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html" target="_blank">
+					<div class="image-container master">
+						<img src="images/mastercard-logo.png" />
+					</div>
+				</a>
+				<a href="https://github.com/about/careers" target="_blank">
+					<div class="image-container git">
+						<img src="images/gh.png" />
+					</div>
+				</a>
+				<a href="https://careers.rolls-royce.com/usa" target="_blank">
+					<div class="image-container rr">
+						<img src="images/rrlogo.png" />
+					</div>
+				</a>
+				<a href="https://up.jobs/index.htm" target="_blank">
+					<div class="image-container union">
+						<img src="images/up_logo.png" />
+					</div>
+				</a>
+				<a href="https://softwaredesignpartners.com/" target="_blank">
+					<div class="image-container software">
+						<img src="images/sdp-logo.png" />
+					</div>
+				</a>
+				<a href="http://www.cboe.com/">
+					<div class="image-container cbo">
+						<img src="images/cbo.png" />
+					</div>
+				</a>
+			<!--
 				<a href="https://cec.mst.edu/" target="_blank">
 					<div class="image-container eng">
 						<img src="images/eng.png" />
 					</div>
 				</a>
+			-->
 			</div>
 
 			<div class="industry-small">
@@ -772,7 +784,7 @@
 						<img src="images/bs.png" />
 					</div>
 				</a>
-				<a href="http://cs.mst.edu/" target="_blank">
+				<!-- <a href="http://cs.mst.edu/" target="_blank">
 					<div class="image-container cs">
 						<img src="images/cs.png" />
 					</div>
@@ -786,12 +798,8 @@
 					<div class="image-container it">
 						<img src="images/info.png" />
 					</div>
-				</a>
+				</a> -->
 			</div>
-		</div>
-
-		<div class="section-title" style="margin-top: 5.5rem; clear: both">
-			<h2>[ Our Partners ]</h2>
 		</div>
 
 		<div class="row">
@@ -811,24 +819,24 @@
 						<img src="images/acmw.PNG" />
 					</div>
 				</a>
-				<a href="https://www.jetbrains.com/" target="_blank">
-					<div class="image-container jet">
-						<img src="images/logo_jetbrains.png" />
-					</div>
-				</a>
 				<a href="https://get.tech" target="_blank">
 					<div class="image-container tech">
 						<img src="images/sponsor_techdomains.png" />
 					</div>
 				</a>
-				<a href="https://www.wolfram.com/language/" target="_blank">
-					<div class="image-container wolfram">
-						<img src="images/wolfram-logo.png" />
+				<a href="https://www.jetbrains.com/">
+					<div class="image-container jet">
+						<img src="images/logo_jetbrains.png" />
 					</div>
 				</a>
 				<a href="https://www.sketchapp.com/" target="_blank">
 					<div class="image-container sketch">
 						<img src="images/sketch.png" />
+					</div>
+				</a>
+				<a href="https://www.wolfram.com/language/" target="_blank">
+					<div class="image-container wolfram">
+						<img src="images/wolfram-logo.png" />
 					</div>
 				</a>
 				<a href="https://www.digitalocean.com/" target="_blank">
