New layout started (section 1)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 		<!-- Main css -->
 		<link rel="stylesheet" href="css/style.css">
 
+		<!-- Icons -->
+		<link rel="stylesheet" href="css/flaticon.css" />
+
 		<!-- Vertical Nav -->
 		<!-- <link rel="stylesheet" href="css/reset.css"> -->
 		<link rel="stylesheet" href="css/vertNav.css"> <!-- Resource style -->
@@ -86,17 +89,6 @@
 <!-- =========================
     INTRO SECTION
 ============================== -->
-<nav class="cd-vertical-nav">
-	<ul>
-		<li><a href="#intro" class="active"><span class="label">Intro</span></a></li>
-		<li><a href="#overview"><span class="label">About</span></a></li>
-		<li><a href="#faq"><span class="label">FAQ</span></a></li>
-		<li><a href="#program"><span class="label">Schedule</span></a></li>
-		<li><a href="#speakers"><span class="label">Team</span></a></li>
-		<li><a href="#sponsors"><span class="label">Sponsors</span></a></li>
-	</ul>
-</nav><!-- .cd-vertical-nav -->
- <button class="cd-nav-trigger cd-image-replace">Open navigation<span aria-hidden="true"></span></button>
 
 <section id="intro" class="cd-section">
 	<div class="container" style="margin-top: -15rem">
@@ -113,7 +105,6 @@
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
-
 		</div>
 	</div>
 </section>
@@ -122,35 +113,134 @@
 <!-- =========================
     OVERVIEW SECTION
 ============================== -->
+<section id="snippets">
+	<div class="container">
+		<div class="stat">
+			<div class="number">
+				<p>
+					1
+				</p>
+			</div>
+			<div class="word">
+				<p>
+					Venue
+				</p>
+			</div>
+		</div>
+		<div class="stat">
+			<div class="number">
+				<p>
+					36
+				</p>
+			</div>
+			<div class="word">
+				<p>
+					Hours
+				</p>
+			</div>
+		</div>
+		<div class="stat">
+			<div class="number">
+				<p>
+					15+
+				</p>
+			</div>
+			<div class="word">
+				<p>
+					Companies
+				</p>
+			</div>
+		</div>
+		<div class="stat">
+			<div class="number">
+				<p>
+					300
+				</p>
+			</div>
+			<div class="word">
+				<p>
+					Attendees
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 <section id="overview" class="cd-section">
 	<div class="container">
-		<div class="row">
-
-			<div class="wow fadeInUp col-sm-12 text-center" style="margin-bottom: 4rem" data-wow-delay="0.4s">
-				<div class="section-title">
-					<h2>READY TO FLEX YOUR BRAIN?</h2>
+		<div class="overview-info">
+			<div class="overview-left">
+				<div class="title">
+					<h2>The <span class="bold">Pick</span>Hacks Experience</h2>
 				</div>
-				<p>PickHacks brings together 300 of the brightest minds around the nation for 36 hours of building, collaboration, and fun.  Our mission is to empower students to explore, learn, and create by creating a supportive and welcoming environment. Want to try out VR for the first time, solder hardware, make android apps, or create awesome web pages? The possibilities are endless. Whether you’re a hacker veteran or first time student, come join us at Missouri S&T in March, learn something new, and create an awesome project!
-				</p>
-				<div class="wow fadeInUp col-md-offset-3 col-md-2 col-sm-3 col-xs-4 info-offset" data-wow-delay="0.6s">
-					<div class="info" style="margin-right: 30%; background-color: #036084;">
-						<h2>1<br /> Venue</h2>
+				<div class="description">
+					<p>
+						PickHacks brings together 300 of the brightest minds around the nation for 36 hours of building, collaboration, and fun. Our mission is to empower students to explore, learn, and create by creating a supportive and welcoming environment. Want to try out VR for the first time, solder hardware, make android apps, or create awesome web pages? The possibilities are endless. Whether you’re a hacker veteran or first time student, come join us at Missouri S&T in March, learn something new, and create an awesome project!
+					</p>
+				</div>
+			</div>
+			<div class="overview-right">
+				<div class="row">
+					<div class="info-section">
+						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
+						<div class="info-words">
+							<h4>ENGAGEMENT</h4>
+							<p>
+								Be inspired by programmers who have built and sold startups.
+							</p>
+						</div>
+					</div>
+					<div class="info-section">
+						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
+						<div class="info-words">
+							<h4>ENGAGEMENT</h4>
+							<p>
+								Be inspired by programmers who have built and sold startups.
+							</p>
+						</div>
 					</div>
 				</div>
-
-				<div class="wow fadeInUp col-md-2 col-sm-3 col-xs-4" data-wow-delay="0.6s">
-					<div class="info" style="margin-left: 15%; margin-right: 15%; background-color: #fed132;">
-						<h2>36<br /> Hours</h2>
+				<div class="row">
+					<div class="info-section">
+						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
+						<div class="info-words">
+							<h4>ENGAGEMENT</h4>
+							<p>
+								Be inspired by programmers who have built and sold startups.
+							</p>
+						</div>
+					</div>
+					<div class="info-section">
+						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
+						<div class="info-words">
+							<h4>ENGAGEMENT</h4>
+							<p>
+								Be inspired by programmers who have built and sold startups.
+							</p>
+						</div>
 					</div>
 				</div>
-
-				<div class="wow fadeInUp col-md-2 col-sm-3 col-xs-4" data-wow-delay="0.6s">
-					<div class="info" style="margin-left: 30%; background-color: #78BE20">
-						<h2>300+<br /> Hackers</h2>
+				<div class="row">
+					<div class="info-section">
+						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
+						<div class="info-words">
+							<h4>ENGAGEMENT</h4>
+							<p>
+								Be inspired by programmers who have built and sold startups.
+							</p>
+						</div>
+					</div>
+					<div class="info-section">
+						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
+						<div class="info-words">
+							<h4>ENGAGEMENT</h4>
+							<p>
+								Be inspired by programmers who have built and sold startups.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</div>
 </section>
@@ -170,7 +260,7 @@
 				</div>
 			</div>
 
-			<div class="wow fadeInUp col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10" data-wow-delay="0.5s">
+			<div class="wow fadeInUp col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 panel-container" data-wow-delay="0.5s">
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
   					<div class="panel panel-default">
@@ -262,7 +352,8 @@
 		       						</div>
 		    						 </div>
 		  					 </div>
-
+				</div>
+				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 								 <div class="panel panel-default">
 			    						<div class="panel-heading" role="tab" id="headingSeven">
 			       						<h4 class="panel-title">
