--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				</div>
 				<div class="description">
 					<p>
-						PickHacks brings together 300 of the brightest minds around the nation for 36 hours of building, collaboration, and fun. Our mission is to empower students to explore, learn, and create by creating a supportive and welcoming environment. Want to try out VR for the first time, solder hardware, make android apps, or create awesome web pages? The possibilities are endless. Whether you’re a hacker veteran or first time student, come join us at Missouri S&T in March, learn something new, and create an awesome project!
+						PickHacks brings together 300 of the brightest minds around the nation for 36 hours of building, collaboration, and fun. Our mission is to empower students to explore, learn, and create by creating a supportive and welcoming environment. Whether you’re a hacker veteran or first time student, come join us at Missouri S&T in March, learn something new, and create an awesome project!
 					</p>
 				</div>
 			</div>
@@ -764,7 +764,7 @@
 	<div class="container showDesktop">
 		<div class="row">
 			<div class="section-title">
-				<h2>[ Our Sponsors ]</h2>
+				<h2>Our Sponsors</h2>
 			</div>
 
 			<div class="row">
