--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<img src="images/pickhacks.png" class="wow fadeInUp" data-wow-delay="0.6s" style="width: auto; height: 100px; margin-bottom: -10rem"/>
-				<h1 class="wow fadeInUp" data-wow-delay="1.1s"><span style="font-weight:normal">PICK</span><span style="font-weight:bolder">HACKS</span></h1>
-				<h4 class="wow fadeInUp" data-wow-delay="1.6s"><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
-				<h4 class="wow fadeInUp" data-wow-delay="1.6s">Missouri S&T</h4>
-				<h4 class="wow fadeInUp" data-wow-delay="1.6s">March 1 - 3, 2019 </h4>
-				<div class="timer wow fadeInUp" data-wow-delay="2.1s"></div>
-				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll wow fadeInUp" data-wow-delay="2.6s">SUBSCRIBE FOR UPDATES</a>
+				<img src="images/pickhacks.png" style="width: auto; height: 100px; margin-bottom: -10rem"/>
+				<h1><span style="font-weight:normal">PICK</span><span style="font-weight:bolder">HACKS</span></h1>
+				<h4><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
+				<h4>Missouri S&T</h4>
+				<h4>March 1 - 3, 2019 </h4>
+				<div class="timer"></div>
+				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll">SUBSCRIBE FOR UPDATES</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
@@ -186,36 +186,16 @@
 						<div class="info-words">
 							<h4>ENGAGEMENT</h4>
 							<p>
-								Be inspired by programmers who have built and sold startups.
+								Be inspired by our keynoted speakers and your fellow attendees.
 							</p>
 						</div>
 					</div>
 					<div class="info-section">
 						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
 						<div class="info-words">
-							<h4>ENGAGEMENT</h4>
+							<h4>INSTRUCTIOn</h4>
 							<p>
-								Be inspired by programmers who have built and sold startups.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="info-section">
-						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
-						<div class="info-words">
-							<h4>ENGAGEMENT</h4>
-							<p>
-								Be inspired by programmers who have built and sold startups.
-							</p>
-						</div>
-					</div>
-					<div class="info-section">
-						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
-						<div class="info-words">
-							<h4>ENGAGEMENT</h4>
-							<p>
-								Be inspired by programmers who have built and sold startups.
+								Learn real, tangible skills from our workshops.
 							</p>
 						</div>
 					</div>
@@ -224,18 +204,38 @@
 					<div class="info-section">
 						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
 						<div class="info-words">
-							<h4>ENGAGEMENT</h4>
+							<h4>INNOVATION</h4>
 							<p>
-								Be inspired by programmers who have built and sold startups.
+								Be challenged to solve real-world problems using cutting-edge technologies and skills that you've learned.
 							</p>
 						</div>
 					</div>
 					<div class="info-section">
 						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
 						<div class="info-words">
-							<h4>ENGAGEMENT</h4>
+							<h4>CAREER DEVELOPMENT</h4>
 							<p>
-								Be inspired by programmers who have built and sold startups.
+								Network with some of the top companies in the Midwest.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="info-section">
+						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
+						<div class="info-words">
+							<h4>FOOD + PRIZES</h4>
+							<p>
+								Winner winner chicken dinner.
+							</p>
+						</div>
+					</div>
+					<div class="info-section">
+						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
+						<div class="info-words">
+							<h4>COMMUNITY</h4>
+							<p>
+								Make lifelong friends and join the hackathon community.
 							</p>
 						</div>
 					</div>
@@ -441,7 +441,7 @@
 			<div class="row" style="clear: both; margin-left: 0">
 
 				<a href="https://www.linkedin.com/in/christopherlgu/">
-					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-6 offset">
 						<div class="speakers-wrapper">
 							<img src="images/team/chris_gu.jpg" class="img-responsive img-circle" alt="speakers">
 								<div class="speakers-thumb">
@@ -453,7 +453,7 @@
 				</a>
 
 				<a href="https://www.linkedin.com/in/luismocampo/">
-					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-6 offset">
 						<div class="speakers-wrapper">
 							<img src="images/team/luis_ocampo.jpg" class="img-responsive img-circle" alt="speakers">
 								<div class="speakers-thumb">
@@ -465,7 +465,7 @@
 				</a>
 
 				<a href="https://www.linkedin.com/in/dylan-burr-0842a414b/">
-					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-6 offset">
 						<div class="speakers-wrapper">
 							<img src="images/team/dylan_burr.jpg" class="img-responsive img-circle" alt="speakers">
 								<div class="speakers-thumb">
@@ -477,7 +477,7 @@
 				</a>
 
 				<a href="https://www.linkedin.com/in/nicolegoetz/">
-					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6" data-wow-delay="0.6s">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
 						<div class="speakers-wrapper">
 							<img src="images/team/nicole_goetz.jpg" class="img-responsive img-circle" alt="speakers">
 								<div class="speakers-thumb">
@@ -492,7 +492,7 @@
 
 			<div class="row" style="margin-left: 0">
 				<a href="https://www.linkedin.com/in/allison-n-chan/">
-					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-6 offset">
 						<div class="speakers-wrapper">
 							<img src="images/team/allison_chan.jpg" class="img-responsive img-circle" alt="speakers">
 								<div class="speakers-thumb">
@@ -504,7 +504,7 @@
 				</a>
 
 				<a href="https://www.linkedin.com/in/jmalega/">
-					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-6 offset">
 						<div class="speakers-wrapper">
 							<img src="images/team/jose_alega.jpg" class="img-responsive img-circle" alt="speakers">
 								<div class="speakers-thumb">
@@ -516,7 +516,7 @@
 				</a>
 
 				<a href="https://www.linkedin.com/in/alan-truong-b5411814b/">
-					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6 offset" data-wow-delay="0.6s">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-6 offset">
 						<div class="speakers-wrapper">
 							<img src="images/team/alan_truong.jpg" class="img-responsive img-circle" alt="speakers">
 								<div class="speakers-thumb">
@@ -528,7 +528,7 @@
 				</a>
 
 				<a href="http://linkedin.com/in/lanchauletran">
-					<div class="wow fadeInUp col-lg-2 col-md-2 col-sm-3 col-xs-6" data-wow-delay="0.6s">
+					<div class="col-lg-2 col-md-2 col-sm-3 col-xs-6">
 						<div class="speakers-wrapper">
 							<img src="images/team/lanchau_letran.png" class="img-responsive img-circle" alt="speakers">
 								<div class="speakers-thumb">
@@ -552,10 +552,8 @@
 	<div class="container">
 		<!-- Section title
 		================================================== -->
-		<div class="wow bounceIn col-md-8 col-sm-10">
-			<div class="section-title">
-				<h2>Frequently Asked Questions.</h2>
-			</div>
+		<div class="section-title">
+			<h2>Frequently Asked Questions.</h2>
 		</div>
 	</div>
 </section>
@@ -564,7 +562,7 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="wow fadeInUp col-md-12 col-sm-12 panel-container" data-wow-delay="0.5s">
+			<div class="col-md-12 col-sm-12 panel-container">
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
   					<div class="panel panel-default">
@@ -768,7 +766,7 @@
 
 			<div class="row">
 
-				<div class="wow bounceIn col-md-12 col-sm-12" style="z-index: 1000">
+				<div class="col-md-12 col-sm-12" style="z-index: 1000">
 					<div>
 						<h4 style="text-transform: uppercase">Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
 					</div>
@@ -949,7 +947,7 @@
 
 		<div class="row">
 
-			<div class="wow bounceIn col-md-12 col-sm-12" style="z-index: 1000">
+			<div class="col-md-12 col-sm-12" style="z-index: 1000">
 				<div>
 					<h4 style="text-transform: uppercase">Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
 				</div>
