--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 		<link rel="stylesheet" href="css/owl.theme.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
 
-		<!-- Main css -->
-		<link rel="stylesheet" href="css/style.css">
-
 		<!-- Icons -->
 		<link rel="stylesheet" href="css/flaticon.css" />
+
+		<!-- Main css -->
+		<link rel="stylesheet" href="css/style.css">
 
 		<!-- Vertical Nav -->
 		<!-- <link rel="stylesheet" href="css/reset.css"> -->
@@ -75,14 +75,26 @@
 <a id="mlh-trust-badge"  href="https://mlh.io/seasons/na-2019/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
 
 <div class="navbar navbar-fixed-top custom-navbar" role="navigation">
-	<div class="container">
-
+	<div class="container" style="margin-right: 0; padding-right: 0; margin-left: 2rem; width: 100%">
 		<!-- navbar header -->
 		<div class="navbar-header">
 			<a href="#intro" class="navbar-brand smoothScroll shown"><img class="img-responsive" src="images/pickhacks.png" /><i>PICKHACKS</i></a>
 		</div>
 
+		<div class="collapse navbar-collapse">
+ 			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#intro" class="smoothScroll">Home</a></li>
+				<li><a href="#overview" class="smoothScroll">About</a></li>
+				<li><a href="#program" class="smoothScroll">Schedule</a></li>
+				<li><a href="#speakers" class="smoothScroll">Team</a></li>
+				<li><a href="#faq" class="smoothScroll">FAQ</a></li>
+				<!--<li><a href="#venue" class="smoothScroll">Venue</a></li>-->
+				<li><a href="#sponsors" class="smoothScroll">Sponsors</a></li>
+				<!--<li><a href="#contact" class="smoothScroll">Contact</a></li>-->
+			</ul>
+ 		</div>
 	</div>
+
 </div>
 
 
@@ -91,17 +103,15 @@
 ============================== -->
 
 <section id="intro" class="cd-section">
-	<div class="container" style="margin-top: -15rem">
+	<div class="container">
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<img src="images/pickhacks.png" style="width: auto; height: 100px; margin-bottom: -10rem"/>
-				<h1><span style="font-weight:normal">PICK</span><span style="font-weight:bolder">HACKS</span></h1>
-				<h4><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
-				<h4>Missouri S&T</h4>
+				<h1><span style="font-weight:900">PICK</span><span style="font-weight:100">HACKS</span></h1>
+				<h4><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a>, Missouri S&T</h4>
 				<h4>March 1 - 3, 2019 </h4>
-				<div class="timer"></div>
-				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll">SUBSCRIBE FOR UPDATES</a>
+				<!-- <div class="timer"></div> -->
+				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll">APPLY</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
@@ -193,7 +203,7 @@
 					<div class="info-section">
 						<div class="flaticon-lightbulb" style="display: inline-block;"></div>
 						<div class="info-words">
-							<h4>INSTRUCTIOn</h4>
+							<h4>INSTRUCTION</h4>
 							<p>
 								Learn real, tangible skills from our workshops.
 							</p>
@@ -251,7 +261,7 @@
 <section id="program" class="cd-section">
 	<div class="container">
 		<div class="details-container">
-			<div class="details-image col-sm-6">
+			<div class="details-image">
 			</div>
 			<div class="details-text">
 				<div class="section-title">
@@ -942,7 +952,7 @@
 	</div>
 	<div class="container showMobile">
 		<div class="section-title">
-			<h2>[ Our Sponsors ]</h2>
+			<h2>Our Sponsors</h2>
 		</div>
 
 		<div class="row">
@@ -1021,11 +1031,11 @@
 				<img src="images/emerson.jpg" />
 			</div>
 		</a>
-		<a href="https://cec.mst.edu/" target="_blank">
+		<!-- <a href="https://cec.mst.edu/" target="_blank">
 			<div class="image-container eng">
 				<img src="images/eng.png" />
 			</div>
-		</a>
+		</a> -->
 
 		<a href="https://balsamiq.com/company/jobs/" target="_blank">
 			<div class="image-container balsamiq">
@@ -1037,7 +1047,7 @@
 				<img src="images/bs.png" />
 			</div>
 		</a>
-		<a href="http://cs.mst.edu/" target="_blank">
+		<!-- <a href="http://cs.mst.edu/" target="_blank">
 			<div class="image-container cs">
 				<img src="images/cs.png" />
 			</div>
@@ -1051,10 +1061,10 @@
 			<div class="image-container it">
 				<img src="images/info.png" />
 			</div>
-		</a>
-		<div class="section-title" style="clear: both; margin-top: 10rem">
+		</a> -->
+		<!-- <div class="section-title" style="clear: both; margin-top: 10rem">
 			<h2>[ Our Partners ]</h2>
-		</div>
+		</div> -->
 
 		<a href="https://mlh.io/" target="_blank">
 			<div class="image-container mlh">
@@ -1135,13 +1145,13 @@
 <script src="js/jquery.parallax.js"></script>
 <script src="js/custom.js"></script>
 <script src="js/smoothscroll.js"></script>
-<script src="js/timeCounter.js"></script>
+<!-- <script src="js/timeCounter.js"></script> -->
 <script src="js/main.js"></script> <!-- Resource jQuery -->
-
+<!--
 <script type="text/javascript">
   var Time = "3/01/2019 16:00:00";
   setInterval(function() { countDown(".timer", Time) }, 1000);
-</script>
+</script> -->
 
 </body>
 </html>
