--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <a id="mlh-trust-badge"  href="https://mlh.io/seasons/na-2019/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
 
 <div class="navbar navbar-fixed-top custom-navbar" role="navigation">
-	<div class="container" style="margin-right: 0; padding-right: 0; margin-left: 2rem; width: 100%">
+	<div class="container" style="margin-right: 0; padding-right: 0; margin-left: 2rem; width: 100%; max-width: 100%">
 		<!-- navbar header -->
 		<div class="navbar-header">
 			<a href="#intro" class="navbar-brand smoothScroll shown"><img class="img-responsive" src="images/pickhacks.png" /><i>PICKHACKS</i></a>
@@ -111,7 +111,7 @@
 				<h4><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a>, Missouri S&T</h4>
 				<h4>March 1 - 3, 2019 </h4>
 				<!-- <div class="timer"></div> -->
-				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll">APPLY</a>
+				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll">SUBSCRIBE</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
