Sponsors update along with other small changes

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 			root.setAttribute( 'class', 'no-touch' );
 		</script>
 
-<!-- Google Font -->
+<!-- Google Fonts -->
 <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
 </head>
 <body data-spy="scroll" data-offset="50" data-target=".navbar-collapse">
@@ -796,18 +797,21 @@
 						<img src="images/sdp-logo.png" />
 					</div>
 				</a>
-				<a href="http://www.cboe.com/">
+				<a href="http://www.cboe.com/" target="_blank">
 					<div class="image-container cbo">
 						<img src="images/cbo.png" />
 					</div>
 				</a>
-			<!--
-				<a href="https://cec.mst.edu/" target="_blank">
-					<div class="image-container eng">
-						<img src="images/eng.png" />
+				<a href="https://www.veteransunited.com/careers/" target="_blank">
+					<div class="image-container vet">
+						<img src="images/vet.png" />
 					</div>
 				</a>
-			-->
+				<a href="#">
+					<div class="image-container linode">
+						<img src="images/linode.png" />
+					</div>
+				</a>
 			</div>
 
 			<div class="industry-small">
@@ -821,41 +825,11 @@
 						<img src="images/bs.png" />
 					</div>
 				</a>
-				<!-- <a href="http://cs.mst.edu/" target="_blank">
-					<div class="image-container cs">
-						<img src="images/cs.png" />
-					</div>
-				</a>
-				<a href="https://casb.mst.edu/" target="_blank">
-					<div class="image-container coab">
-						<img src="images/coab.png" />
-					</div>
-				</a>
-				<a href="https://it.mst.edu/" target="_blank">
-					<div class="image-container it">
-						<img src="images/info.png" />
-					</div>
-				</a> -->
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="partners">
-				<a href="https://mlh.io/" target="_blank">
-					<div class="image-container mlh">
-						<img src="images/mlh.png" />
-					</div>
-				</a>
-				<a href="https://acm.mst.edu" target="_blank">
-					<div class="image-container acm">
-						<img src="images/acm.png" />
-					</div>
-				</a>
-				<a href="" target="_blank">
-					<div class="image-container acm-w">
-						<img src="images/acmw.PNG" />
-					</div>
-				</a>
 				<a href="https://get.tech" target="_blank">
 					<div class="image-container tech">
 						<img src="images/sponsor_techdomains.png" />
@@ -883,6 +857,48 @@
 				</a>
 			</div>
 
+		</div>
+
+		<div class="section-title" style="margin-bottom: 2%">
+			<h2>Our Partners</h2>
+		</div>
+
+		<div class="partners">
+			<a href="https://mlh.io/" target="_blank">
+				<div class="image-container mlh">
+					<img src="images/mlh.png" />
+				</div>
+			</a>
+			<a href="https://acm.mst.edu" target="_blank">
+				<div class="image-container acm">
+					<img src="images/acm.png" />
+				</div>
+			</a>
+			<a href="" target="_blank">
+				<div class="image-container acm-w">
+					<img src="images/acmw.PNG" />
+				</div>
+			</a>
+			<a href="https://cec.mst.edu/" target="_blank">
+				<div class="image-container eng">
+					<img src="images/eng.png" />
+				</div>
+			</a>
+			<a href="http://cs.mst.edu/" target="_blank">
+				<div class="image-container cs">
+					<img src="images/cs.png" />
+				</div>
+			</a>
+			<a href="https://casb.mst.edu/" target="_blank">
+				<div class="image-container coab">
+					<img src="images/coab.png" />
+				</div>
+			</a>
+			<a href="https://it.mst.edu/" target="_blank">
+				<div class="image-container it">
+					<img src="images/info.png" />
+				</div>
+			</a>
 		</div>
 
 	</div>
@@ -1051,21 +1067,15 @@
 <footer>
 	<div class="container">
 		<div class="row">
-
 			<div class="col-md-12 col-sm-12">
 				<p>Made with love in Rolla, MO</p>
-
-
-
 				<ul class="social-icon">
 					<li><a href="https://www.facebook.com/MSTPickHacks/" class="fa fa-facebook"></a></li>
 					<li><a href="https://twitter.com/mstpickhacks" class="fa fa-twitter"></a></li>
 					<li><a href="https://www.instagram.com/mstpickhacks/" class="fa fa-instagram"></a></li>
 					<li><a href="mailto:pickhacks@mst.edu" class="fa fa-envelope"></a></li>
 				</ul>
-
 			</div>
-
 		</div>
 	</div>
 </footer>
