--- a/index.html
+++ b/index.html
@@ -713,9 +713,9 @@
 
 			<div class="row">
 
-				<div class="col-md-12 col-sm-12" style="z-index: 1000">
+				<div class="col-md-12 col-sm-12" style="padding-left: 0">
 					<div>
-						<h4 style="text-transform: uppercase">Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
+						<h4 style="text-transform: uppercase; margin-bottom: 4%">Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
 					</div>
 				</div>
 			</div>
@@ -909,7 +909,7 @@
 
 		<div class="row">
 
-			<div class="col-md-12 col-sm-12" style="z-index: 1000">
+			<div class="col-md-12 col-sm-12">
 				<div>
 					<h4 style="text-transform: uppercase">Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
 				</div>
