--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
 						<img src="images/sdp-logo.png" />
 					</div>
 				</a>
-				<a href="http://www.cboe.com/" target="_blank">
+				<a href="https://cboe.wd1.myworkdayjobs.com/External_Career_CBOE/1/refreshFacet/318c8bb6f553100021d223d9780d30be" target="_blank">
 					<div class="image-container cbo">
 						<img src="images/cbo.png" />
 					</div>
@@ -807,7 +807,7 @@
 						<img src="images/vet.png" />
 					</div>
 				</a>
-				<a href="#">
+				<a href="https://www.linode.com/">
 					<div class="image-container linode">
 						<img src="images/linode.png" />
 					</div>
