--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
 		</a>
 		<a href="https://jobs.panerabread.com/" target="_blank">
 			<div class="image-container panera">
-				<img src="images/panera-logo.png" />
+				<img src="images/panera-logo.svg" />
 			</div>
 		</a>
 		<a href="https://careers.express-scripts.com/us/en/students" target="_blank">
@@ -943,39 +943,9 @@
 			</div>
 		</a>
 
-		<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html" target="_blank">
-			<div class="image-container master">
-				<img src="images/mastercard-logo.png" />
-			</div>
-		</a>
-		<a href="https://up.jobs/index.htm" target="_blank">
-			<div class="image-container union">
-				<img src="images/up_logo.png" />
-			</div>
-		</a>
 		<a href="http://careers.edwardjones.com/index.html" target="_blank">
 			<div class="image-container edward">
 				<img src="images/logo_edwardjones.png" />
-			</div>
-		</a>
-		<a href="https://1904labs.com/join-us/jobs/" target="_blank">
-			<div class="image-container labs">
-				<img src="images/1904logo.png" />
-			</div>
-		</a>
-		<a href="https://careers.rolls-royce.com/usa" target="_blank">
-			<div class="image-container rr">
-				<img src="images/rrlogo.png" />
-			</div>
-		</a>
-		<a href="https://kcnsc.doe.gov/" target="_blank">
-			<div class="image-container hw">
-				<img src="images/hw.png" />
-			</div>
-		</a>
-		<a href="https://github.com/about/careers" target="_blank">
-			<div class="image-container git">
-				<img src="images/gh.png" />
 			</div>
 		</a>
 		<a href="https://www.emerson.com/en-us/careers" target="_blank">
@@ -983,11 +953,56 @@
 				<img src="images/emerson.jpg" />
 			</div>
 		</a>
-		<!-- <a href="https://cec.mst.edu/" target="_blank">
-			<div class="image-container eng">
-				<img src="images/eng.png" />
+		<a href="https://kcnsc.doe.gov/" target="_blank">
+			<div class="image-container hw">
+				<img src="images/hw.png" />
 			</div>
-		</a> -->
+		</a>
+		<a href="https://1904labs.com/join-us/jobs/" target="_blank">
+			<div class="image-container labs">
+				<img src="images/1904logo.png" />
+			</div>
+		</a>
+		<a href="https://www.mastercard.us/en-us/about-mastercard/careers.html" target="_blank">
+			<div class="image-container master">
+				<img src="images/mastercard-logo.png" />
+			</div>
+		</a>
+		<a href="https://github.com/about/careers" target="_blank">
+			<div class="image-container git">
+				<img src="images/gh.png" />
+			</div>
+		</a>
+		<a href="https://careers.rolls-royce.com/usa" target="_blank">
+			<div class="image-container rr">
+				<img src="images/rrlogo.png" />
+			</div>
+		</a>
+		<a href="https://up.jobs/index.htm" target="_blank">
+			<div class="image-container union">
+				<img src="images/up_logo.png" />
+			</div>
+		</a>
+		<a href="https://softwaredesignpartners.com/" target="_blank">
+			<div class="image-container software">
+				<img src="images/sdp-logo.png" />
+			</div>
+		</a>
+		<a href="https://cboe.wd1.myworkdayjobs.com/External_Career_CBOE/1/refreshFacet/318c8bb6f553100021d223d9780d30be" target="_blank">
+			<div class="image-container cbo">
+				<img src="images/cbo.png" />
+			</div>
+		</a>
+		<a href="https://www.veteransunited.com/careers/" target="_blank">
+			<div class="image-container vet">
+				<img src="images/vet.png" />
+			</div>
+		</a>
+		<a href="https://www.linode.com/">
+			<div class="image-container linode">
+				<img src="images/linode.png" />
+			</div>
+		</a>
 
 		<a href="https://balsamiq.com/company/jobs/" target="_blank">
 			<div class="image-container balsamiq">
@@ -999,24 +1014,36 @@
 				<img src="images/bs.png" />
 			</div>
 		</a>
-		<!-- <a href="http://cs.mst.edu/" target="_blank">
-			<div class="image-container cs">
-				<img src="images/cs.png" />
+
+		<a href="https://get.tech" target="_blank">
+			<div class="image-container tech">
+				<img src="images/sponsor_techdomains.png" />
 			</div>
 		</a>
-		<a href="https://casb.mst.edu/" target="_blank">
-			<div class="image-container coab">
-				<img src="images/coab.png" />
+		<a href="https://www.jetbrains.com/">
+			<div class="image-container jet">
+				<img src="images/logo_jetbrains.png" />
 			</div>
 		</a>
-		<a href="https://it.mst.edu/" target="_blank">
-			<div class="image-container it">
-				<img src="images/info.png" />
+		<a href="https://www.sketchapp.com/" target="_blank">
+			<div class="image-container sketch">
+				<img src="images/sketch.png" />
 			</div>
-		</a> -->
-		<!-- <div class="section-title" style="clear: both; margin-top: 10rem">
-			<h2>[ Our Partners ]</h2>
-		</div> -->
+		</a>
+		<a href="https://www.wolfram.com/language/" target="_blank">
+			<div class="image-container wolfram">
+				<img src="images/wolfram-logo.png" />
+			</div>
+		</a>
+		<a href="https://www.digitalocean.com/" target="_blank">
+			<div class="image-container do">
+				<img src="images/do.png" />
+			</div>
+		</a>
+
+		<div class="section-title" style="margin-bottom: 2%">
+			<h2>Our Partners</h2>
+		</div>
 
 		<a href="https://mlh.io/" target="_blank">
 			<div class="image-container mlh">
@@ -1033,29 +1060,24 @@
 				<img src="images/acmw.PNG" />
 			</div>
 		</a>
-		<a href="https://www.jetbrains.com/" target="_blank">
-			<div class="image-container jet">
-				<img src="images/logo_jetbrains.png" />
+		<a href="https://cec.mst.edu/" target="_blank">
+			<div class="image-container eng">
+				<img src="images/eng.png" />
 			</div>
 		</a>
-		<a href="https://get.tech" target="_blank">
-			<div class="image-container tech">
-				<img src="images/sponsor_techdomains.png" />
+		<a href="http://cs.mst.edu/" target="_blank">
+			<div class="image-container cs">
+				<img src="images/cs.png" />
 			</div>
 		</a>
-		<a href="https://www.wolfram.com/language/" target="_blank">
-			<div class="image-container wolfram">
-				<img src="images/wolfram-logo.png" />
+		<a href="https://casb.mst.edu/" target="_blank">
+			<div class="image-container coab">
+				<img src="images/coab.png" />
 			</div>
 		</a>
-		<a href="https://www.sketchapp.com/" target="_blank">
-			<div class="image-container sketch">
-				<img src="images/sketch.png" />
-			</div>
-		</a>
-		<a href="https://www.digitalocean.com/" target="_blank">
-			<div class="image-container do">
-				<img src="images/do.png" />
+		<a href="https://it.mst.edu/" target="_blank">
+			<div class="image-container it">
+				<img src="images/info.png" />
 			</div>
 		</a>
 	</div>
