mobile logo stuff

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 
 <!-- Google Fonts -->
 <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
 </head>
 <body data-spy="scroll" data-offset="50" data-target=".navbar-collapse">
@@ -705,7 +704,7 @@
     SPONSORS SECTION
 ============================== -->
 <section id="sponsors" class="cd-section">
-	<div class="container showDesktop">
+	<div class="container">
 		<div class="row">
 			<div class="section-title">
 				<h2>Our Sponsors</h2>
@@ -902,7 +901,7 @@
 		</div>
 
 	</div>
-	<div class="container showMobile">
+	<!-- <div class="container showMobile">
 		<div class="section-title">
 			<h2>Our Sponsors</h2>
 		</div>
@@ -1080,7 +1079,7 @@
 				<img src="images/info.png" />
 			</div>
 		</a>
-	</div>
+	</div> -->
 </section>
 
 <!-- =========================
