--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
 				</a>
 			</div>
 
-			<div class="industry-small">
+			<div class="industry-small showDesktop">
 				<a href="https://balsamiq.com/company/jobs/" target="_blank">
 					<div class="image-container balsamiq">
 						<img src="images/logo_balsamiq.png" />
@@ -827,7 +827,7 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row showDesktop">
 			<div class="partners">
 				<a href="https://get.tech" target="_blank">
 					<div class="image-container tech">
@@ -856,6 +856,46 @@
 				</a>
 			</div>
 
+		</div>
+
+		<div class="row showMobile">
+			<div class="partners industry-small">
+				<a href="https://balsamiq.com/company/jobs/" target="_blank">
+					<div class="image-container balsamiq">
+						<img src="images/logo_balsamiq.png" />
+					</div>
+				</a>
+				<a href="https://www.brewerscience.com/about-us/company/careers/job-postings/" target="_blank">
+					<div class="image-container brewer">
+						<img src="images/bs.png" />
+					</div>
+				</a>
+				<a href="https://get.tech" target="_blank">
+					<div class="image-container tech">
+						<img src="images/sponsor_techdomains.png" />
+					</div>
+				</a>
+				<a href="https://www.jetbrains.com/">
+					<div class="image-container jet">
+						<img src="images/logo_jetbrains.png" />
+					</div>
+				</a>
+				<a href="https://www.sketchapp.com/" target="_blank">
+					<div class="image-container sketch">
+						<img src="images/sketch.png" />
+					</div>
+				</a>
+				<a href="https://www.wolfram.com/language/" target="_blank">
+					<div class="image-container wolfram">
+						<img src="images/wolfram-logo.png" />
+					</div>
+				</a>
+				<a href="https://www.digitalocean.com/" target="_blank">
+					<div class="image-container do">
+						<img src="images/do.png" />
+					</div>
+				</a>
+			</div>
 		</div>
 
 		<div class="section-title" style="margin-bottom: 2%">
