--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 									<tr>
 		                <td>9.00 PM</td>
 		                <td>Hacking Begins</td>
-		                <td>Carver/Turner, Meramec/Gasconade, Missouri/Ozark, St. Pat's Ballroom C</td>
+		                <td>Hacker Rooms</td>
 		              </tr>
 									<tr>
 		                <td>9.00 - 9.45 PM</td>
@@ -379,12 +379,12 @@
 		              <tr>
 		                <td>09.00 AM</td>
 		                <td>Hacking Ends</td>
-		                <td>Carver/Turner, Meramec/Gasconade, Missouri/Ozark, St. Pat's Ballroom C</td>
+		                <td>Hacker Rooms</td>
 		              </tr>
 									<tr>
 		                <td>10.00 AM - 12.00 PM</td>
 		                <td>Judging</td>
-		                <td>Carver/Turner, Meramec/Gasconade, Missouri/Ozark, St. Pat's Ballroom C</td>
+		                <td>Hacker Rooms</td>
 		              </tr>
 									<tr>
 		                <td>12.00 - 1.00 PM</td>
@@ -467,7 +467,7 @@
 								<tr>
 									<td>9.00 PM</td>
 									<td>Hacking Begins</td>
-									<td>Carver/Turner, Meramec/Gasconade, Missouri/Ozark, St. Pat's Ballroom C</td>
+									<td>Hacker Rooms</td>
 								</tr>
 								<tr>
 									<td>9.00 - 9.45 PM</td>
@@ -599,12 +599,12 @@
 								<tr>
 									<td>09.00 AM</td>
 									<td>Hacking Ends</td>
-									<td>Carver/Turner, Meramec/Gasconade, Missouri/Ozark, St. Pat's Ballroom C</td>
+									<td>Hacker Rooms</td>
 								</tr>
 								<tr>
 									<td>10.00 AM - 12.00 PM</td>
 									<td>Judging</td>
-									<td>Carver/Turner, Meramec/Gasconade, Missouri/Ozark, St. Pat's Ballroom C</td>
+									<td>Hacker Rooms</td>
 								</tr>
 								<tr>
 									<td>12.00 - 1.00 PM</td>
