Minor F&Q changes and description changes

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				</div>
 				<div class="description">
 					<p>
-						PickHacks brings together 300 of the brightest minds around the nation for 36 hours of building, collaboration, and fun. Our mission is to empower students to explore, learn, and create by creating a supportive and welcoming environment. Whether you’re a hacker veteran or first time student, come join us at Missouri S&T in March, learn something new, and create an awesome project!
+						PickHacks is a celebration of technology that brings together 300 of the brightest minds around the nation for 36 hours of building, collaboration, and fun. Our mission is to empower students to explore, learn, and create within a supportive and welcoming environment.
 					</p>
 				</div>
 			</div>
@@ -836,13 +836,13 @@
 	    						<div class="panel-heading" role="tab" id="headingFive">
 	       						<h4 class="panel-title">
 	         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-	           							How do I apply?
+	           						  Do you have any rules?
 	         						</a>
 	       						</h4>
 	     					</div>
 	    						<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 	       						<div class="panel-body">
-	                             	<p>Applications will open in January 2019. Make sure to subscribe to our mailing list to be the first to know when registration opens!</p>
+	                             	<p>Yes: we follow the Major League Hacking <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">Code of Conduct.</a></p>
 	       						</div>
 	    						 </div>
 	  					 </div>
@@ -888,7 +888,8 @@
 				     					</div>
 				    						<div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
 				       						<div class="panel-body">
-				                             	<p>Due to us sending buses, travel reimbursement will be limited to a case-by-case basis. That said, don’t let cost decide your attendance; we’ll evaluate your application and get back to you if we can help you!</p>
+				                             	<p>We'll be sending buses to the following universities: Mizzou, Truman, Purdue, SIUE, SLU, UIUC, UMSL, and WashU.<br />
+																			If you do not attend or live near one of those schools, we will be evaluating reimbursement on a case by case basis. That being said, if you have any concerns or questions about travel, please email us at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></p>
 				       						</div>
 				    						 </div>
 				  					 </div>
