--- a/index.html
+++ b/index.html
@@ -1068,9 +1068,19 @@
 						<img src="images/vet.png" />
 					</div>
 				</a>
-				<a href="https://www.linode.com/">
+				<a href="https://www.linode.com/" target="_blank">
 					<div class="image-container linode">
 						<img src="images/linode.png" />
+					</div>
+				</a>
+				<a href="#" target="_blank">
+					<div class="image-container bayer">
+						<img src="images/bayer.png" />
+					</div>
+				</a>
+				<a href="#" target="_blank">
+					<div class="image-container cards">
+						<img src="images/cards.png" />
 					</div>
 				</a>
 			</div>
