Icon text in footer

--- a/index.html
+++ b/index.html
@@ -1360,7 +1360,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<p>Made with love in Rolla, MO</p>
+				<p>Made with love in Rolla, MO<br />Icon made by Freepik from www.flaticon.com</p>
 				<ul class="social-icon">
 					<li><a href="https://www.facebook.com/MSTPickHacks/" class="fa fa-facebook"></a></li>
 					<li><a href="https://twitter.com/mstpickhacks" class="fa fa-twitter"></a></li>
