--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
 			<div class="industry">
 				<a href="https://jobs.centene.com/" target="_blank">
 					<div class="image-container centene">
-						<img src="images/sponsor_centene.jpg" />
+						<img src="images/centene.png" />
 					</div>
 				</a>
 				<a href="https://jobs.panerabread.com/" target="_blank">
@@ -1002,7 +1002,7 @@
 			<div class="industry-mid">
 				<a href="http://www.tradebot.com/careers.asp" target="_blank">
 					<div class="image-container tradebot">
-						<img src="images/sponsor_tradebot.jpg" />
+						<img src="images/tradebot.png" />
 					</div>
 				</a>
 				<a href="https://mixmax.com/careers/" target="_blank">
@@ -1020,7 +1020,7 @@
 				</a>
 				<a href="https://www.emerson.com/en-us/careers" target="_blank">
 					<div class="image-container emerson">
-						<img src="images/emerson.jpg" />
+						<img src="images/emerson.png" />
 					</div>
 				</a>
 				<a href="https://kcnsc.doe.gov/" target="_blank">
@@ -1073,7 +1073,7 @@
 						<img src="images/linode.png" />
 					</div>
 				</a>
-				<a href="jobs.monsanto.com" target="_blank">
+				<a href="https://jobs.monsanto.com/" target="_blank">
 					<div class="image-container bayer">
 						<img src="images/bayer.png" />
 					</div>
