Faq not automatically opened

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
         						</a>
       						</h4>
     					</div>
-   						<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+   						<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       						<div class="panel-body">
         						<p>We like to think of hackathons as “invention marathons.” You (the hacker) will spend 36 hours building projects (hacks) in teams of 1 - 4 people. Come with an idea, and we’ll provide everything you need to turn that idea into reality — hardware, mentors, food, you name it. There is also a Code of Conduct. <a href="http://mlh.io/code-of-conduct">Check it out here.</a></p>
       						</div>
